src/objects/GetStartedChecklistSection__mdt.object
<CustomObject>
    <description>NPSP Get Started Page sections</description>
    <label>NPSP Get Started Checklist Section</label>
    <pluralLabel>NPSP Get Started Checklist Sections</pluralLabel>
    <fields>
        <fullName>Description_Label__c</fullName>
        <description>The API name for the Description label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API name for the Description label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Description Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Type__c</fullName>
        <description>The type of Get Started page (Admin or End User) where this section will appear.</description>
        <inlineHelpText>The type of Get Started page (Admin or End User) where this section will appear.</inlineHelpText>
        <label>Page Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                    <default>true</default>
                    <label>Admin</label>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>The position of this section on the Get Started page.</description>
        <inlineHelpText>The position of this section on the Get Started page.</inlineHelpText>
        <label>Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Label__c</fullName>
        <description>The API Name for the Title label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</description>
        <inlineHelpText>The API Name for the Title label of a section item on the Get Started page. Must match an imported label in the gsLabelMapper LWC.</inlineHelpText>
        <label>Title Label Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>